codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__away_summary_history_cell.snap
---
source: tui/src/chatwidget/tests/away_summary.rs
expression: rendered
---
• You are implementing away summaries in the TUI. Next, wire the focus timer
  into the background request.
